# python-sdformat

./: .gitignore  LICENSE  README.md  pyproject.toml
pysdf/: __init__.py  base.py  sdf_types.py
tests/: test_base_features.py  test_examples.py
