[tool.poetry]
name = "python-sdformat"
version = "0.2.0"
description = "Python Parser for SDFormat files."
authors = ["FirefoxMetzger <sebastian@wallkoetter.net>"]
license = "BSD-2-Clause"
packages = [
    {include = "pysdf"},
]

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.8.0"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
